[gd_scene load_steps=37 format=3 uid="uid://bqgsmqrmf62un"]

[ext_resource type="Script" path="res://Scripts/slime_boss.gd" id="1_afghb"]
[ext_resource type="Texture2D" uid="uid://budo07aos2ugs" path="res://Assets/Sprites/RPG/BossSlimeSpriteSheet.png" id="1_b1lvi"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yw3ri"]
radius = 52.96
height = 190.0

[sub_resource type="Animation" id="Animation_r5u3i"]
resource_name = "Impact"
length = 0.7
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_b1lvi")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625),
"transitions": PackedFloat32Array(1e+06, 1e+06, 1e+06, 1e+06, 1e+06, 1e+06),
"update": 0,
"values": [Rect2(163, 1245, 186, 124), Rect2(645, 1234, 244, 162), Rect2(1104, 1224, 352, 186), Rect2(1611, 1222, 361, 192), Rect2(2148, 1219, 311, 202), Rect2(3031, 1023, 72, 68)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:shape:radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5),
"transitions": PackedFloat32Array(1e+06, 1e+06, 1e+06, 1e+06, 1e+06),
"update": 0,
"values": [52.96, 79.0, 93.0, 96.0, 102.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:shape:height")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5),
"transitions": PackedFloat32Array(1e+06, 1e+06, 1e+06, 1e+06, 1e+06),
"update": 0,
"values": [190.0, 244.0, 354.0, 364.0, 330.0]
}

[sub_resource type="Animation" id="Animation_vbi20"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(163, 1245, 186, 124)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:shape:radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [52.96]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:shape:height")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [190.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g4d3h"]
_data = {
"Impact": SubResource("Animation_r5u3i"),
"RESET": SubResource("Animation_vbi20")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rmh6h"]
size = Vector2(110, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpcih"]
atlas = ExtResource("1_b1lvi")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_4joh5"]
atlas = ExtResource("1_b1lvi")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rg5a"]
atlas = ExtResource("1_b1lvi")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_enbgo"]
atlas = ExtResource("1_b1lvi")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq5yn"]
atlas = ExtResource("1_b1lvi")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_appkm"]
atlas = ExtResource("1_b1lvi")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvc4w"]
atlas = ExtResource("1_b1lvi")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixvm8"]
atlas = ExtResource("1_b1lvi")
region = Rect2(2048, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_yl171"]
atlas = ExtResource("1_b1lvi")
region = Rect2(2560, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_odppt"]
atlas = ExtResource("1_b1lvi")
region = Rect2(2560, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_dj8jv"]
atlas = ExtResource("1_b1lvi")
region = Rect2(3072, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxs37"]
atlas = ExtResource("1_b1lvi")
region = Rect2(3584, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgihh"]
atlas = ExtResource("1_b1lvi")
region = Rect2(4096, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_lj0bb"]
atlas = ExtResource("1_b1lvi")
region = Rect2(4096, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkfxn"]
atlas = ExtResource("1_b1lvi")
region = Rect2(4608, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wgwv"]
atlas = ExtResource("1_b1lvi")
region = Rect2(0, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tn4o"]
atlas = ExtResource("1_b1lvi")
region = Rect2(512, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvtl6"]
atlas = ExtResource("1_b1lvi")
region = Rect2(1024, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdlmh"]
atlas = ExtResource("1_b1lvi")
region = Rect2(1536, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfav1"]
atlas = ExtResource("1_b1lvi")
region = Rect2(2048, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_irefm"]
atlas = ExtResource("1_b1lvi")
region = Rect2(2560, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxqem"]
atlas = ExtResource("1_b1lvi")
region = Rect2(3072, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_mq021"]
atlas = ExtResource("1_b1lvi")
region = Rect2(3584, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyft4"]
atlas = ExtResource("1_b1lvi")
region = Rect2(4096, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_csorq"]
atlas = ExtResource("1_b1lvi")
region = Rect2(4608, 512, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_rp1pp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpcih")
}],
"loop": true,
"name": &"Die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4joh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rg5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_enbgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq5yn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_appkm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvc4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixvm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yl171")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odppt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dj8jv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxs37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgihh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lj0bb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkfxn")
}],
"loop": true,
"name": &"WalkDown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wgwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wgwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tn4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvtl6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvtl6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdlmh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfav1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irefm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irefm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxqem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mq021")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyft4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyft4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_csorq")
}],
"loop": true,
"name": &"WalkUp",
"speed": 6.0
}]

[sub_resource type="Animation" id="Animation_00y50"]
resource_name = "Damage"
length = 0.2
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.937255, 0.239216, 0.239216, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_wjodi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fnj1o"]
_data = {
"Damage": SubResource("Animation_00y50"),
"RESET": SubResource("Animation_wjodi")
}

[node name="SlimeBoss" type="CharacterBody2D"]
script = ExtResource("1_afghb")

[node name="ImpactTimer" type="Timer" parent="."]
wait_time = 0.35
one_shot = true

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 524289
collision_mask = 524289
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_yw3ri")

[node name="Sprite2D" type="Sprite2D" parent="AttackArea"]
region_enabled = true
region_rect = Rect2(163, 1245, 186, 124)

[node name="ImpactAnimation" type="AnimationPlayer" parent="AttackArea"]
libraries = {
"": SubResource("AnimationLibrary_g4d3h")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_rmh6h")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -19)
sprite_frames = SubResource("SpriteFrames_rp1pp")
animation = &"Die"
autoplay = "WalkDown"
frame_progress = 0.35224

[node name="Damage" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fnj1o")
}

[node name="DeleteAfterTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ImpactTimer" to="." method="_on_impact_timer_timeout"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="animation_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_changed"]
[connection signal="timeout" from="DeleteAfterTimer" to="." method="_on_delete_after_timer_timeout"]
